OVERFLOW VISIBLE ISSUE FIXED

--- a/my-first-site/src/App.css
+++ b/my-first-site/src/App.css
@@ -12,3 +12,8 @@
     text-stroke: 1px black;
   }
 }
+
+.custom-parallax > div {
+  overflow: visible !important;
+}
+
